--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,16 @@
   color: black;
   border: 2px solid #4caf50;
 }
+
+nav {
+  background-color: red;
+}
+
+.nav-pic {
+    width: 125px;
+    margin-left: 10px;
+}
+
+.pokemon-list {
+    display: flex;
+}
