--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 .button-class {
-  background-color: #4caf50; /* Green */
+  background-color: #FFFF00;
   border: none;
-  color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -11,8 +10,8 @@
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
   cursor: pointer;
-  background-color: white;
-  color: black;
+  background-color: blue;
+  color: gold;
   border: 2px solid #4caf50;
 }
 
