--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,3 @@
-.button-class {
-  background-color: #FFFF00;
-  border: none;
-  padding: 20px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 25px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-  background-color: blue;
-  color: gold;
-  border: 2px solid #4caf50;
-}
-
 nav {
   background-color: red;
 }
@@ -22,4 +5,8 @@ nav {
 .nav-pic {
     width: 125px;
     margin-left: 10px;
+}
+
+.pokemon-list {
+    display: flex;
 }
